# codex

./: .env.example  .gitignore  CONTEXT.md  COPILOT_CODE_REQUEST.md  FEATURES.md  FORK_POLICY.md  Makefile  PILOT_PLAYBOOK.md  QUICKSTART.md  README.md  REVIEW_REQUEST.md  STATE_OF_PROJECT.md  package.json  pnpm-lock.yaml  pytest.ini  sitecustomize.py
.githooks/: pre-commit
.github/: copilot-instructions.md
codex-rs/: Cargo.toml  README.md  logo_instructions.md
codex-rs/context/: Cargo.toml
codex-rs/context/src/: lib.rs  retrieval.rs
codex-rs/context/tests/: test_arango_fixture.rs  test_budgeter.rs  test_context_summary_v2.rs
codex-rs/docs/: Cargo.toml
codex-rs/docs/src/: main.rs
codex-rs/notify-slack/: Cargo.toml
codex-rs/notify-slack/src/: main.rs
docs/: SCILLM_LOCAL.md  THEMING_AND_ANIMATIONS.md  advanced.md  chutes.md  contributing.md  copilot-auto-review.md  copilot_web_automation.md  slash-commands.md
scenarios/: chutes_utils.py  scillm_router_parallel_smoke.py  test_chutes_autodiscover_exec.py  test_chutes_cli_subcommand.py  test_chutes_exec.py  test_chutes_price_partial_nan.py  test_chutes_price_relaxation.py  test_chutes_profiles.py  test_chutes_warmup_dryrun.py  test_context_budget.py  test_context_reflow.py  test_context_summary_first_line.py  test_login_roundtrip.py  test_mcp_and_proxy_and_more.py  test_slash_exec.py
scripts/: agent_bus.py  build-cx-plus.sh  copilot_auto_review.sh  copilot_focus_calibrate.sh  copilot_process_review.sh  copilot_prompt_build.sh  copilot_remote_cycle.sh  copilot_submit_async.sh  copilot_watch.sh  notify.sh  (+11 more)
(+288 files in other folders)
