[package]
name = "codex-context"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Knowledge-First context orchestration (Phase-0) for Codex CLI"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex-lite = "0.1"
async-trait = "0.1"
sha1 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }
parking_lot = "0.12"
regex = "1"
