[package]
name = "codex-docs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Documentation generators for Codex (CLI / config / events)"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

